Update README with setup and usage instructions
Expanded setup instructions, added features, and common issues section.